# SketchEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/src/: Main.cpp
Sketch/: CMakeLists.txt
Sketch/Private/Sketch/Base/: Logger.cpp  Window.cpp
Sketch/Private/Sketch/Input/: DeviceHandleKeyboard.cpp  DeviceHandleMouse.cpp  Input.cpp
Sketch/Private/Sketch/Platform/GLFW/: GLInputMap.cpp  GLWindow.cpp  GLWindow.h
Sketch/Private/Sketch/Platform/OpenGL/: GLInputMap.cpp  GLWindow.cpp
Sketch/Private/Sketch/Platform/PlatformWin32/: Win32CleanupApi.h  Win32FileSystem.cpp  Win32Timer.cpp  Win32Timer.h
Sketch/Private/Sketch/Platform/Win32/: Win32FileSystem.cpp
Sketch/Private/Sketch/Util/: TimeStamp.cpp  Timer.cpp
Sketch/Public/Sketch/: Sketch.h
Sketch/Public/Sketch/Base/: Core.h  FileSystem.h  Logger.h  Window.h
Sketch/Public/Sketch/Input/: DeviceHandle.h  DeviceHandleKeyboard.h  DeviceHandleMouse.h  Event.h  EventDispatcher.h  EventHandler.h  EventKeyboard.h  EventMouse.h  Input.h  InputCodes.h  InputDevice.h  InputDeviceKeyboard.h  InputDeviceMouse.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Sketch/Public/Sketch/Platform/: Platform.h
Sketch/Public/Sketch/Platform/GLFW/: GLWindow.h
Sketch/Public/Sketch/Platform/OpenGL/: GLInputMap.h  GLWindow.h
Sketch/Public/Sketch/Platform/PlatformGeneric/: IGenericTimer.h  IGenericWindow.h
Sketch/Public/Sketch/Util/: TimeStamp.h  Timer.h
Sketch/Public/Sketch/Util/Code/: Interface.h  NoCopy.h  NoMove.h  Singleton.h
