file(GLOB_RECURSE GAME_SOURCES src/*.cpp)
file(GLOB_RECURSE GAME_HEADERS src/*.h)

add_executable(${GAME_NAME} ${GAME_HEADERS} ${GAME_SOURCES})

target_include_directories(${GAME_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/${GAME_NAME}/src)
target_link_libraries(${GAME_NAME} ${ENGINE_NAME})

set_target_properties(${GAME_NAME}
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
	CXX_STANDARD 17
)
